# tg-dump-llm

./: README.md  pyproject.toml
src/app/: main.py
src/models/: dump.py
